# $Id$

2007-01-29	Dmitry E. Demidov

	* main/Utils/RussianTextUtils.class.php: added method getDateAsText

2007-01-28	Konstantin V. Arkhipov

	* global.inc.php.tpl: new overridable constant introduced -
	ONPHP_IPC_PERMS.

2007-01-27	Konstantin V. Arkhipov

	* main/Flow/: ImportCommand implemented.

	* main/Containers/Unified/UnifiedContainer.class.php: object's
	comparsion bug introduced by identity map in php-5.2 fixed (was:
	'Nesting level too deep - recursive dependency?').

	* meta/builders/AutoClassBuilder.class.php: now builds custom
	__sleep() method to prevent serialization of full objects with
	LazyOneToOne relation.

2007-01-25	Dmitry E. Demidov

	* main/core/Form/FormUtils.class.php: form2object() and object2form()
	now accepts any objects.
	
2007-01-22	Konstantin V. Arkhipov

	* main/DAOs/Handlers/MessageSegmentHandler.class.php,
	main/DAOs/Handlers/SharedMemorySegmentHandler.class.php:
	segments/queues are now created with 0660 permission, instead of 0600.

2007-01-21	Konstantin V. Arkhipov

	* core/Form/Primitives/PrimitiveIdentifier.class.php: now able to
	guess class' name from it's object or DAO.

	* core/Form/Primitives/DateRangeList.class.php: printRange() removed
	in favour of DateRange's toString().

	* core/Cache/Cache.class.php: 'forever' is now 7 days (was only 3).

2007-01-19	Konstantin V. Arkhipov

	* main/DAOs/Handlers/MessageSegmentHandler.class.php,
	main/DAOs/Workers/DelayedDaoWorker.class.php: sysvmsg-based
	asynchronous DAO-worker.

2007-01-18	Konstantin V. Arkhipov

	* main/DAOs/GenericDAO.class.php: identity's map and inner worker
	serialization prevented.

	* core/Form/FormUtils.class.php: object2form() now handles Prototyped
	objects individually.

	* core/Form/FormUtils.class.php: gently handling of LazyOneToOne
	implemented.

2007-01-17	Konstantin V. Arkhipov

	* meta/: no more collections fetching in getContainer-methods.

	* main/Containers/Unified/UnifiedContainer.class.php: now